# python-tagged_dataclasses

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pythonpackage.yml
tagged_dataclasses/: tagged_dataclasses.py
tagged_dataclasses_tests/: test_tagged_union.py
