[project]
name = "tagged_dataclasses"
version = "0.0.0"
description = ""
authors = [
    "Andrey Cizov <acizov@gmail.com>"
]
license = "MIT"
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/andreycizov/python-tagged_dataclasses"
repository = "https://github.com/andreycizov/python-tagged_dataclasses"
documentation = "https://github.com/andreycizov/python-tagged_dataclasses"

keywords = ["tagged union"]

classifiers = [
        'Development Status :: 2 - Pre-Alpha',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: Apache Software License',
        'Natural Language :: English',
        'Programming Language :: Python :: 3.6',
]

# Requirements
[dependencies]
typing_inspect = "^0.5.0"
#dataclasses = { python = "^3.6" }

[dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"